--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,11 @@ img {
     width: 100%;
   }
 }
+@media screen and (min-width: 768px) and (max-width: 1160px){
+    .container{
+        width: 100%;
+    }
+}
 
 @media screen and (max-width: 480px){
     .container{
